[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lectura-stt"
version = "3.2.2"
description = "Pipeline STT complet du francais — audio vers texte (CTC + P2G)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
authors = [{name = "Max Carriere", email = "admin@lectura.world"}]
keywords = [
    "stt", "asr", "speech-to-text", "speech-recognition", "french",
    "ctc", "p2g", "audio-to-text",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: French",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "lectura-decodeur>=3.0",
    "lectura-p2g>=4.6",
]

[project.optional-dependencies]
onnx = ["lectura-decodeur[onnx]", "lectura-graphemiseur[onnx]"]
aligneur = ["lectura-p2g[aligneur]"]

[project.urls]
Homepage = "https://www.lectura.world/developpement/modules/"
Repository = "https://github.com/maxcarriere/lectura-modules/tree/main/STT"
Issues = "https://github.com/maxcarriere/lectura-modules/issues"

[tool.setuptools.packages.find]
where = ["src"]
