[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "lectura-syllabeur"
version = "2.0.0"
description = "Analyseur syllabique complet du français — groupes de lecture, élisions, liaisons, enchaînements"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "CC-BY-SA-4.0"}
authors = [{name = "Lectura"}]
keywords = ["syllabeur", "french", "nlp", "syllabation", "phonétique"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: French",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lectura_syllabeur = ["py.typed"]
