[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "lectura-syllabeur"
version = "2.0.0"
description = "Analyseur syllabique complet du français — groupes de lecture, élisions, liaisons, enchaînements"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
authors = [{name = "Max Carriere"}]
keywords = ["syllabeur", "french", "nlp", "syllabation", "phonétique"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: French",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = []

[project.urls]
Homepage = "https://lectura.fr/outils/syllabeur"
Repository = "https://github.com/maxcarriere/lectura-modules/tree/main/Syllabeur"
Issues = "https://github.com/maxcarriere/lectura-modules/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lectura_syllabeur = ["py.typed"]
