[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lectura-tts-dipho"
version = "1.0.0"
description = "Pipeline TTS diphonique du francais — G2P + concatenation WORLD + retimbre optionnel"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
authors = [{name = "Max Carriere", email = "admin@lectura.world"}]
keywords = [
    "tts", "text-to-speech", "french", "speech-synthesis",
    "pipeline", "g2p", "diphone", "concatenation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: French",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "lectura-g2p>=4.1",
    "lectura-diphone>=2.0",
]

[project.optional-dependencies]
retimbre = ["lectura-vc-zeroshot>=1.1"]
local = ["lectura-diphone[local]"]

[project.urls]
Homepage = "https://www.lectura.world/developpement/modules/"
Repository = "https://github.com/maxcarriere/lectura-modules/tree/main/TTS-Dipho"
Issues = "https://github.com/maxcarriere/lectura-modules/issues"

[tool.setuptools.packages.find]
where = ["src"]
