[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lectura-vc-locuteurs"
version = "1.0.0"
description = "Conversion vocale RVC vers 6 voix pre-entrainees (ONNX pur)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
authors = [{name = "Max Carriere", email = "contact@lec-tu-ra.com"}]
keywords = ["voice-conversion", "rvc", "onnx", "tts"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "onnxruntime>=1.16",
    "numpy>=1.24",
    "librosa>=0.10",
    "soundfile>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://www.lec-tu-ra.com/solutions/modules/vc-locuteurs/"
Repository = "https://github.com/maxcarriere/lectura-modules/tree/main/VC-Locuteurs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lectura_vc_locuteurs = ["data/*.json", "modeles/*.enc"]
