[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lectura-vc-zeroshot"
version = "1.1.0"
description = "Conversion vocale zero-shot via OpenVoice (ONNX pur)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
authors = [{name = "Max Carriere", email = "contact@lec-tu-ra.com"}]
keywords = ["voice-conversion", "openvoice", "zero-shot", "onnx"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "onnxruntime>=1.16",
    "numpy>=1.24",
    "librosa>=0.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://www.lec-tu-ra.com/solutions/modules/vc-zeroshot/"
Repository = "https://github.com/maxcarriere/lectura-modules/tree/main/VC-ZeroShot"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lectura_vc_zeroshot = ["modeles/*.enc", "presets/*.npy"]
